--- a/index.html
+++ b/index.html
@@ -12,6 +12,44 @@
 </head>
 
 <body>
+
+  <header>
+    <nav>
+      <ul>
+        <li><a class="menu" href="#one">1</a></li>
+        <li><a class="menu" href="#two">2</a></li>
+        <li><a class="menu" href="#three">3</a></li>
+      </ul>
+    </nav>
+  </header>
+
+    <section>
+      <div class="box first">
+        <div id="one" class="shoes">
+          <img src="img/01.png" alt="">
+          <p class="texto">il nostro modello di punta</p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="box second">
+        <div id="two" class="shoes">
+          <img src="img/02.png" alt="">
+          <p class="texts">il nostro modello di punta</p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="box third">
+        <div id="three" class="shoes">
+          <img src="img/03.png" alt="">
+          <p class="textt">il nostro modello di punta</p>
+        </div>
+      </div>
+    </section>
+  
   
 </body>
 
