--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+  <!-- header with menu -->
   <header>
     <nav>
       <ul>
@@ -23,27 +24,28 @@
     </nav>
   </header>
 
-    <section> 
+    <!-- sections of the image -->
+    <section id="one"> 
       <div class="box first">
-        <div id="one" class="shoes">
+        <div  class="shoes">
           <img src="img/01.png" alt="">
           <p class="texto">il nostro modello di punta</p>
         </div>
       </div>
     </section>
 
-    <section>
+    <section id="two">
       <div class="box second">
-        <div id="two" class="shoes">
+        <div  class="shoes">
           <img src="img/02.png" alt="">
           <p class="texts">il nostro modello di punta</p>
         </div>
       </div>
     </section>
 
-    <section>
+    <section id="three">
       <div class="box third">
-        <div id="three" class="shoes">
+        <div  class="shoes">
           <img src="img/03.png" alt="">
           <p class="textt">il nostro modello di punta</p>
         </div>
